--- a/addition.html
+++ b/addition.html
@@ -6,39 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/addition.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Addition</title>
 </head>
-<body>
+<body onload="getQStart()">
 
-  <div class="container-fluid">
-    <div id="main" class="jumbotron text-center">
-
-
-      <h1>Math-Quest</h1>
-      <h3>"I used to hate math, but then I realized decimals have a point."</h3>
-<div class="container-fluid">
-    <div id="menu-items" class="row">
-
-      <a href="addition.html"><div id="addition" class="menu-items col-6">
-      <h2>addition</h2>
-    </div></a>
-
-      <a href=""><div id="subtraction" class="menu-items col-6">
-      <h2>subtraction</h2>
-      </div></a>
-
-      <a href=""><div id="division" class="menu-items col-6">
-      <h2>division</h2>
-      </div></a>
-
-      <a href=""><div id="multiplication" class="menu-items col-6">
-      <h2>multiplication</h2>
-      </div></a>
-    </div>
-      <!--
+  <div class="container-fluid animated slideInDown">
+    <div id="main" class="jumbotron text-center ">
       <h2><div id="score">SCORE: 0</div></h2>
       <h2><div id="lives">LIVES: 5</div></h2>
 
@@ -49,14 +25,12 @@
     </form>
     <button class="btn btn-primary" id="submit" type="submit">Submit</button>
   </div>
-  -->
-
-
-
+  </div>
 </div>
-</div>
-
+<div class="container text-center">
+<h1 id="postscore"></h1></div>
 <div class="container text-center"id="btn-container">
+
 <button href="#" class="btn btn-danger" type="button" id="playagain" onClick="window.location.reload()">Play again?</button>
 </div>
 
