--- a/addition.html
+++ b/addition.html
@@ -15,6 +15,7 @@
 
   <div class="container-fluid animated slideInDown">
     <div id="main" class="jumbotron text-center ">
+      <a href="index.html"><i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i></a>
       <h2><div id="score">SCORE: 0</div></h2>
       <h2><div id="lives">LIVES: 5</div></h2>
 
@@ -34,11 +35,8 @@
 <button href="#" class="btn btn-danger" type="button" id="playagain" onClick="window.location.reload()">Play again?</button>
 </div>
 
-
 <div id="footer" class="container-fluid text-center">
-
     <div class="row">
-
     <div class="col-sm-12 contact-item">
       <p><a href="https://github.com/Patrikdb" target="_blank"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a><a href="https://www.upwork.com/o/profiles/users/_~01ce836e826c28b9ec/" target="_blank"><i class="fa fa-id-card fa-5x" aria-hidden="true"></i></a></p>
 
@@ -46,10 +44,11 @@
   </div>
 </div>
 </body>
+
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script src="js/bootstrap.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="js/addition.js"></script>
   </body>
 </html>
