--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'><link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -14,10 +14,10 @@
 <body>
 
   <div class="container-fluid">
-    <div id="main" class="jumbotron text-center">
+    <div id="main" class="jumbotron text-center animated fadeIn">
 
 
-      <h1>Math-Quest</h1>
+      <h1 id="mathq">Math-Quest</h1>
       <h3>"I used to hate math, but then I realized decimals have a point."</h3>
 <div class="container-fluid">
     <div id="menu-items" class="row">
@@ -26,39 +26,22 @@
       <h2>addition</h2>
     </div></a>
 
-      <a href=""><div id="subtraction" class="menu-items col-6">
+      <a href="subtraction.html"><div id="subtraction" class="menu-items col-6">
       <h2>subtraction</h2>
       </div></a>
 
-      <a href=""><div id="division" class="menu-items col-6">
+      <a href="division.html"><div id="division" class="menu-items col-6">
       <h2>division</h2>
       </div></a>
 
-      <a href=""><div id="multiplication" class="menu-items col-6">
+      <a href="multiplication.html"><div id="multiplication" class="menu-items col-6">
       <h2>multiplication</h2>
       </div></a>
     </div>
-      <!--
-      <h2><div id="score">SCORE: 0</div></h2>
-      <h2><div id="lives">LIVES: 5</div></h2>
-
-    <div id="content" class="">
-      <h1><div class=""id="question"></div></h1>
-      <form id="myForm" action="">
-      <input id="answer" type="text">
-    </form>
-    <button class="btn btn-primary" id="submit" type="submit">Submit</button>
-  </div>
-  -->
-
-
-
 </div>
 </div>
 
-<div class="container text-center"id="btn-container">
-<button href="#" class="btn btn-danger" type="button" id="playagain" onClick="window.location.reload()">Play again?</button>
-</div>
+
 
 
 <div id="footer" class="container-fluid text-center">
@@ -76,6 +59,5 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script src="js/bootstrap.js"></script>
-  <script src="js/scripts.js"></script>
   </body>
 </html>
